--- a/apps/docs/content/guides/ai.mdx
+++ b/apps/docs/content/guides/ai.mdx
@@ -113,8 +113,7 @@ export const integrations = [
   },
   {
     name: 'LangChain',
-    description:
-      'LangChain is a language-agnostic, open-source, and self-hosted API for text translation, summarization, and sentiment analysis.',
+    test: 'LangChain is a language-agnostic, open-source, and self-hosted API for text translation, summarization, and sentiment analysis.',
     href: '/guides/ai/langchain',
   },
   {
